--- a/style.css
+++ b/style.css
@@ -61,11 +61,23 @@ body {
 
 .buttons {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
-  margin-left: 20px;
+}
+
+.Yes{
+    background-color: #017cff;
+    color: white;
+    font-weight: 600;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 12px;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 3px 3px black;
 }
 
 .btn {
@@ -76,7 +88,7 @@ body {
   text-align: center;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: -168px 2px;
   cursor: pointer;
   border: none;
   border-radius: 12px;
